--- a/NIBMArticle/NIBMArticle/Storyboards/Base.lproj/Main.storyboard
+++ b/NIBMArticle/NIBMArticle/Storyboards/Base.lproj/Main.storyboard
@@ -13,60 +13,139 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="NIBMArticle" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="loginsb" id="BYZ-38-t0r" customClass="ViewController" customModule="NIBMArticle" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3ZT-7u-s7b">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="User Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3ZT-7u-s7b">
                                 <rect key="frame" x="20" y="470" width="374" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vfi-X6-aUy">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Vfi-X6-aUy">
                                 <rect key="frame" x="20" y="508" width="374" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Forgot Password ? " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cin-Nz-lIs">
-                                <rect key="frame" x="20" y="810" width="146" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Cin-Nz-lIs">
+                                <rect key="frame" x="20" y="630" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Sign up here" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PTq-p7-cxs">
-                                <rect key="frame" x="297" y="810" width="97" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="XS3-xt-Zje">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Image" translatesAutoresizingMaskIntoConstraints="NO" id="XS3-xt-Zje">
                                 <rect key="frame" x="70" y="296" width="273" height="166"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b46-Bb-QRp">
-                                <rect key="frame" x="107" y="555" width="201" height="35"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.0" green="0.19130457379999999" blue="0.39700048580000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="b46-Bb-QRp">
+                                <rect key="frame" x="107" y="555" width="201" height="30"/>
+                                <color key="backgroundColor" red="0.020380286500000001" green="0.61575895550000004" blue="0.98122483490000001" alpha="0.66325449489999999" colorSpace="custom" customColorSpace="sRGB"/>
                                 <state key="normal" title="Login">
                                     <color key="titleColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
-                                    <color key="titleShadowColor" red="0.0" green="0.19130457379999999" blue="0.39700048580000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleShadowColor" red="0.020380286500000001" green="0.61575895550000004" blue="0.98122483490000001" alpha="0.66325449489999999" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="login_btn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="DWO-Go-j6a"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RdA-ST-ffs">
+                                <rect key="frame" x="23" y="624" width="131" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Forgot Password ? "/>
+                                <connections>
+                                    <segue destination="op3-hb-aLC" kind="show" id="OHs-BC-ozJ"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fxe-be-aDA">
+                                <rect key="frame" x="288" y="622" width="82" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Sign In here"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.32138550281524658" green="0.75739568471908569" blue="0.90843796730041504" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="XS3-xt-Zje" secondAttribute="bottom" constant="400" id="33M-gy-r4s"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="b46-Bb-QRp" secondAttribute="bottom" constant="277" id="BVc-aJ-Blw"/>
+                            <constraint firstItem="Vfi-X6-aUy" firstAttribute="top" secondItem="3ZT-7u-s7b" secondAttribute="bottom" constant="8" id="Dww-gb-zY7"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="3ZT-7u-s7b" secondAttribute="trailing" constant="20" id="OSO-Xu-PxV"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="XS3-xt-Zje" secondAttribute="trailing" constant="71" id="Owu-v4-3Oh"/>
+                            <constraint firstItem="b46-Bb-QRp" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="107" id="QZM-a5-Cui"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="b46-Bb-QRp" secondAttribute="trailing" constant="106" id="TOb-7f-lK3"/>
+                            <constraint firstItem="XS3-xt-Zje" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="70" id="Ysk-JD-dpX"/>
+                            <constraint firstItem="b46-Bb-QRp" firstAttribute="top" secondItem="Vfi-X6-aUy" secondAttribute="bottom" constant="17" id="aZi-jH-Nbg"/>
+                            <constraint firstItem="Vfi-X6-aUy" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="bcF-Zq-3ag"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Vfi-X6-aUy" secondAttribute="trailing" constant="20" id="gHa-Cf-c4y"/>
+                            <constraint firstItem="3ZT-7u-s7b" firstAttribute="top" secondItem="XS3-xt-Zje" secondAttribute="bottom" constant="8" id="gVy-Nb-upd"/>
+                            <constraint firstItem="Cin-Nz-lIs" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="mZv-l7-wd1"/>
+                            <constraint firstItem="3ZT-7u-s7b" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="tVy-OI-xjq"/>
+                            <constraint firstItem="Cin-Nz-lIs" firstAttribute="top" secondItem="b46-Bb-QRp" secondAttribute="bottom" constant="45" id="vrY-Bb-bRf"/>
+                            <constraint firstItem="XS3-xt-Zje" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="252" id="zuY-gQ-9RQ"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <connections>
+                        <outlet property="password" destination="Vfi-X6-aUy" id="g8u-5b-lol"/>
+                        <outlet property="userName" destination="3ZT-7u-s7b" id="q1V-gO-QTE"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="137.68115942028987" y="96.428571428571431"/>
+        </scene>
+        <!--Pw Reset View Controller-->
+        <scene sceneID="bbz-hO-qAp">
+            <objects>
+                <viewController id="op3-hb-aLC" customClass="pwResetViewController" customModule="NIBMArticle" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="sY1-hw-40D">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Reset Password " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wmp-Bl-DBX">
+                                <rect key="frame" x="121" y="289" width="126" height="48"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6dG-gH-oLH">
+                                <rect key="frame" x="49" y="367" width="317" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="js6-Sp-EOs">
+                                <rect key="frame" x="104" y="433" width="201" height="30"/>
+                                <color key="backgroundColor" red="0.020380286500000001" green="0.61575895550000004" blue="0.98122483490000001" alpha="0.66325449489999999" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Enter">
+                                    <color key="titleColor" cocoaTouchSystemColor="tableCellGroupedBackgroundColor"/>
+                                    <color key="titleShadowColor" red="0.020380286500000001" green="0.61575895550000004" blue="0.98122483490000001" alpha="0.66325449489999999" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="enter_btn_click:" destination="op3-hb-aLC" eventType="touchUpInside" id="NOa-JC-3eD"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" red="0.32138550281524658" green="0.75739568471908569" blue="0.90843796730041504" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="D7H-P2-XcS" firstAttribute="trailing" secondItem="wmp-Bl-DBX" secondAttribute="trailing" constant="167" id="2LI-sm-NLx"/>
+                            <constraint firstItem="6dG-gH-oLH" firstAttribute="leading" secondItem="D7H-P2-XcS" secondAttribute="leading" constant="49" id="4Fj-Io-yMZ"/>
+                            <constraint firstItem="6dG-gH-oLH" firstAttribute="top" secondItem="wmp-Bl-DBX" secondAttribute="bottom" constant="30" id="HdD-Hs-Q1s"/>
+                            <constraint firstItem="js6-Sp-EOs" firstAttribute="leading" secondItem="D7H-P2-XcS" secondAttribute="leading" constant="104" id="Odj-FM-kLU"/>
+                            <constraint firstItem="wmp-Bl-DBX" firstAttribute="leading" secondItem="D7H-P2-XcS" secondAttribute="leading" constant="121" id="S5f-Ni-0Ms"/>
+                            <constraint firstItem="wmp-Bl-DBX" firstAttribute="top" secondItem="D7H-P2-XcS" secondAttribute="top" constant="245" id="YYR-c3-nSQ"/>
+                            <constraint firstItem="D7H-P2-XcS" firstAttribute="trailing" secondItem="6dG-gH-oLH" secondAttribute="trailing" constant="48" id="rrT-ga-wsN"/>
+                            <constraint firstItem="D7H-P2-XcS" firstAttribute="trailing" secondItem="js6-Sp-EOs" secondAttribute="trailing" constant="109" id="ua9-iL-Nje"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="D7H-P2-XcS"/>
+                    </view>
+                    <connections>
+                        <outlet property="email" destination="6dG-gH-oLH" id="P1i-X7-1gf"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dBB-5Y-SMv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1029" y="96"/>
         </scene>
     </scenes>
     <resources>
